hphp/hack/test/typecheck/needs_concrete/needs_concrete_2.php.exp
ERROR: File "needs_concrete_2.php", line 6, characters 11-12:
Cannot call `A::m2` (a `<<__NeedsConcrete>>` method) via `self`. It requires `static` to refer to a concrete class, but `self` sets `static` to a class that may not be concrete. (Typing[4490])
  File "needs_concrete_2.php", line 10, characters 26-27:
  Declaration is here
